--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "heroku": "^7.2.0",
     "mongodb": "^3.6.5",
+    "node": "^15.12.0",
     "nodemon": "^2.0.7"
   }
 }
