--- a/package.json
+++ b/package.json
@@ -2,10 +2,261 @@
   "name": "todo-task-fullstack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.7",
+    "ansi-align": "^3.0.0",
+    "ansi-escapes": "^3.2.0",
+    "ansi-regex": "^5.0.0",
+    "ansi-styles": "^3.2.1",
+    "ansicolors": "^0.3.2",
+    "anymatch": "^3.1.1",
+    "argparse": "^1.0.10",
+    "array-flatten": "^1.1.1",
+    "array-union": "^2.1.0",
+    "async": "^0.9.2",
+    "balanced-match": "^1.0.0",
+    "binary-extensions": "^2.2.0",
+    "bl": "^2.2.1",
+    "body-parser": "^1.19.0",
+    "boxen": "^4.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "bson": "^1.1.6",
+    "bytes": "^3.1.0",
+    "cacheable-request": "^6.1.0",
+    "camelcase": "^5.3.1",
+    "cardinal": "^2.1.1",
+    "chalk": "^2.4.2",
+    "chokidar": "^3.5.1",
+    "ci-info": "^2.0.0",
+    "clean-stack": "^1.3.0",
+    "cli-boxes": "^2.2.1",
+    "cli-progress": "^3.9.0",
+    "cli-ux": "^4.9.3",
+    "clone-response": "^1.0.2",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "colors": "^1.4.0",
+    "concat-map": "^0.0.1",
+    "configstore": "^5.0.1",
+    "content-disposition": "^0.5.3",
+    "content-type": "^1.0.4",
+    "cookie": "^0.4.0",
+    "cookie-signature": "^1.0.6",
+    "core-util-is": "^1.0.2",
+    "cors": "^2.8.5",
+    "cross-spawn": "^6.0.5",
+    "crypto-random-string": "^2.0.0",
+    "date-fns": "^2.19.0",
+    "debug": "^2.6.9",
+    "decompress-response": "^3.3.0",
+    "deep-extend": "^0.6.0",
+    "defer-to-connect": "^1.1.3",
+    "denque": "^1.5.0",
+    "depd": "^1.1.2",
+    "destroy": "^1.0.4",
+    "dir-glob": "^3.0.1",
+    "dot-prop": "^5.3.0",
+    "dotenv": "^8.2.0",
+    "duplexer3": "^0.1.4",
+    "ee-first": "^1.1.1",
+    "ejs": "^3.1.6",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^1.0.2",
+    "end-of-stream": "^1.4.4",
+    "error-ex": "^1.3.2",
+    "escape-goat": "^2.1.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "esprima": "^4.0.1",
+    "etag": "^1.8.1",
+    "express": "^4.17.1",
+    "extract-stack": "^1.0.0",
+    "fast-glob": "^3.2.5",
+    "fastq": "^1.11.0",
+    "filelist": "^1.0.2",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.1.2",
+    "forwarded": "^0.1.2",
+    "fresh": "^0.5.2",
+    "fs-extra": "^7.0.1",
+    "fsevents": "^2.3.2",
+    "get-stream": "^4.1.0",
+    "glob-parent": "^5.1.2",
+    "global-dirs": "^2.1.0",
+    "globby": "^11.0.3",
+    "got": "^9.6.0",
+    "graceful-fs": "^4.2.6",
+    "growly": "^1.3.0",
+    "has-flag": "^3.0.0",
+    "has-yarn": "^2.1.0",
+    "heroku": "^7.2.0",
+    "heroku-client": "^3.1.0",
+    "http-cache-semantics": "^4.1.0",
+    "http-call": "^5.3.0",
+    "http-errors": "^1.7.2",
+    "hyperlinker": "^1.0.0",
+    "iconv-lite": "^0.4.24",
+    "ignore": "^5.1.8",
+    "ignore-by-default": "^1.0.1",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^3.2.0",
+    "inherits": "^2.0.3",
+    "ini": "^1.3.7",
+    "ipaddr.js": "^1.9.1",
+    "is-arrayish": "^0.2.1",
+    "is-binary-path": "^2.1.0",
+    "is-ci": "^2.0.0",
+    "is-docker": "^2.1.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.1",
+    "is-installed-globally": "^0.3.2",
+    "is-npm": "^4.0.0",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-retry-allowed": "^1.2.0",
+    "is-stream": "^1.1.0",
+    "is-typedarray": "^1.0.0",
+    "is-wsl": "^1.1.0",
+    "is-yarn-global": "^0.3.0",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "jake": "^10.8.2",
+    "js-yaml": "^3.14.1",
+    "json-buffer": "^3.0.0",
+    "json-parse-better-errors": "^1.0.2",
+    "jsonfile": "^4.0.0",
+    "keyv": "^3.1.0",
+    "latest-version": "^5.1.0",
+    "lodash": "^4.17.21",
+    "lodash._reinterpolate": "^3.0.0",
+    "lodash.template": "^4.5.0",
+    "lodash.templatesettings": "^4.2.0",
+    "lowercase-keys": "^1.0.1",
+    "lru-cache": "^6.0.0",
+    "make-dir": "^3.1.0",
+    "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "merge2": "^1.4.1",
+    "methods": "^1.1.2",
+    "micromatch": "^4.0.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.46.0",
+    "mime-types": "^2.1.29",
+    "mimic-response": "^1.0.1",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "mongodb": "^3.6.5",
+    "ms": "^2.0.0",
+    "natural-orderby": "^2.0.3",
+    "negotiator": "^0.6.2",
+    "netrc-parser": "^3.1.6",
+    "nice-try": "^1.0.5",
+    "node": "^15.12.0",
+    "node-bin-setup": "^1.0.6",
+    "node-notifier": "^5.4.5",
+    "nodemon": "^2.0.7",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "normalize-url": "^4.5.0",
+    "object-assign": "^4.1.1",
+    "object-treeify": "^1.1.33",
+    "on-finished": "^2.3.0",
+    "once": "^1.4.0",
+    "open": "^6.4.0",
+    "original": "^1.0.2",
+    "p-cancelable": "^1.1.0",
+    "p-finally": "^1.0.0",
+    "package-json": "^6.5.0",
+    "parse-json": "^4.0.0",
+    "parseurl": "^1.3.3",
+    "password-prompt": "^1.1.2",
+    "path-key": "^2.0.1",
+    "path-to-regexp": "^0.1.7",
+    "path-type": "^4.0.0",
+    "picomatch": "^2.2.2",
+    "prepend-http": "^2.0.0",
+    "process-nextick-args": "^2.0.1",
+    "proxy-addr": "^2.0.6",
+    "pstree.remy": "^1.1.8",
+    "pump": "^3.0.0",
+    "pupa": "^2.1.1",
+    "qs": "^6.7.0",
+    "querystringify": "^2.2.0",
+    "queue-microtask": "^1.2.3",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.4.0",
+    "rc": "^1.2.8",
+    "readable-stream": "^2.3.7",
+    "readdirp": "^3.5.0",
+    "redeyed": "^2.1.1",
+    "registry-auth-token": "^4.2.1",
+    "registry-url": "^5.1.0",
+    "require_optional": "^1.0.1",
+    "requires-port": "^1.0.0",
+    "resolve-from": "^2.0.0",
+    "responselike": "^1.0.2",
+    "reusify": "^1.0.4",
+    "run-parallel": "^1.2.0",
+    "safe-buffer": "^5.1.2",
+    "safer-buffer": "^2.1.2",
+    "saslprep": "^1.0.3",
+    "semver": "^5.7.1",
+    "semver-diff": "^3.1.1",
+    "send": "^0.17.1",
+    "serve-static": "^1.14.1",
+    "setprototypeof": "^1.1.1",
+    "shebang-command": "^1.2.0",
+    "shebang-regex": "^1.0.0",
+    "shellwords": "^0.1.1",
+    "signal-exit": "^3.0.3",
+    "slash": "^3.0.0",
+    "sparse-bitfield": "^3.0.3",
+    "statuses": "^1.5.0",
+    "string_decoder": "^1.1.1",
+    "string-width": "^4.2.2",
+    "strip-ansi": "^6.0.0",
+    "strip-json-comments": "^2.0.1",
+    "supports-color": "^5.5.0",
+    "supports-hyperlinks": "^1.0.1",
+    "term-size": "^2.2.1",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.0",
+    "touch": "^3.1.0",
+    "treeify": "^1.1.0",
+    "tslib": "^1.9.3",
+    "tunnel-agent": "^0.6.0",
+    "type-fest": "^0.8.1",
+    "type-is": "^1.6.18",
+    "typedarray-to-buffer": "^3.1.5",
+    "undefsafe": "^2.0.3",
+    "unique-string": "^2.0.0",
+    "universalify": "^0.1.2",
+    "unpipe": "^1.0.0",
+    "update-notifier": "^4.1.3",
+    "url-parse": "^1.5.1",
+    "url-parse-lax": "^3.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "which": "^1.3.1",
+    "widest-line": "^3.1.0",
+    "wrap-ansi": "^4.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "xdg-basedir": "^4.0.0",
+    "yallist": "^4.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,15 +267,5 @@
   "bugs": {
     "url": "https://github.com/davidnisbetdev/todo-task-fullstack/issues"
   },
-  "homepage": "https://github.com/davidnisbetdev/todo-task-fullstack#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "heroku": "^7.2.0",
-    "mongodb": "^3.6.5",
-    "node": "^15.12.0",
-    "nodemon": "^2.0.7"
-  }
+  "homepage": "https://github.com/davidnisbetdev/todo-task-fullstack#readme"
 }
