--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@heroku-cli/plugin-buildpack-registry": "^1.0.1",
     "@heroku-cli/plugin-buildpacks": "^7.47.13",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.7",
