--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@heroku-cli/plugin-buildpack-registry": "^1.0.1",
     "@heroku-cli/plugin-buildpacks": "^7.47.13",
+    "@heroku/buildpack-registry": "^1.0.1",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.7",
     "ansi-align": "^3.0.0",
@@ -18,6 +19,7 @@
     "array-flatten": "^1.1.1",
     "array-union": "^2.1.0",
     "async": "^0.9.2",
+    "async-file": "^2.0.2",
     "balanced-match": "^1.0.0",
     "binary-extensions": "^2.2.0",
     "bl": "^2.2.1",
@@ -182,6 +184,7 @@
     "path-key": "^2.0.1",
     "path-to-regexp": "^0.1.7",
     "path-type": "^4.0.0",
+    "phoenix": "^1.5.8",
     "picomatch": "^2.2.2",
     "prepend-http": "^2.0.0",
     "process-nextick-args": "^2.0.1",
