--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "has-flag": "^3.0.0",
     "has-yarn": "^2.1.0",
     "heroku": "^7.2.0",
+    "heroku-cli": "^6.15.31",
     "heroku-client": "^3.1.0",
     "http-cache-semantics": "^4.1.0",
     "http-call": "^5.3.0",
